--- a/src/main/resources/templates/client-code/http-resilience4j-util.kt.hbs
+++ b/src/main/resources/templates/client-code/http-resilience4j-util.kt.hbs
@@ -1,4 +1,4 @@
-package {{ packages.client }}
+package {{ client }}
 
 import io.github.resilience4j.circuitbreaker.CircuitBreaker
 import io.github.resilience4j.circuitbreaker.CircuitBreakerRegistry
